Fix for bug 84544. Check for null pointer to avoid crash. R=varada, SR=mscott, A=asa